Optimised docker image